test/testdata/ingress/stargate/kustomization.yaml
apiVersion: kustomize.config.k8s.io/v1beta1
kind: Kustomization
resources:
  - stargate-ingress-http.yaml
  - stargate-ingress-cql.yaml
