test/testdata/ingress/stargate/stargate-ingress-cql.yaml
# https://github.com/traefik/traefik/blob/v2.5.1/docs/content/reference/dynamic-configuration/traefik.containo.us_ingressroutetcps.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: stargate-service-native-ingress
  namespace: k8ssandra
spec:
  entryPoints:
    - cql
  routes:
    # no TLS enabled
    - match: HostSNI(`*`) # can't use a specific hostname here because TLS is not enabled
      services:
        - name: cluster1-dc1-stargate-service
          port: 9042
