test/testdata/ingress/stargate/stargate-ingress-http.yaml
# https://github.com/traefik/traefik/blob/v2.5.1/docs/content/reference/dynamic-configuration/traefik.containo.us_ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: stargate-service-http-ingress
  namespace: k8ssandra
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`stargate.example.com`) && PathPrefix(`/v1/auth`)
      kind: Rule
      services:
        - name: cluster1-dc1-stargate-service
          port: 8081
    - match: Host(`stargate.example.com`) && (PathPrefix(`/graphql-schema`) || PathPrefix(`/graphql/`) || PathPrefix(`/playground`))
      kind: Rule
      services:
        - name: cluster1-dc1-stargate-service
          port: 8080
    - match: Host(`stargate.example.com`) && PathPrefix(`/v2/`)
      kind: Rule
      services:
        - name: cluster1-dc1-stargate-service
          port: 8082
